Revised codebase & fixed bugs